[package]
name = "osucraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
valence = { git = "https://github.com/valence-rs/valence.git", version = "0.2.0" }
